--- a/mp_kq/pages/list/list.wxml
+++ b/mp_kq/pages/list/list.wxml
@@ -10,7 +10,7 @@
   <listItem showExtr="{{true}}" text="标题文本" value="说明文本" ></listItem> 
   <listItem showExtr="{{true}}" text="标题文本" value="说明文本" ></listItem> 
 </list>
-<list sub="带图标、说明、跳转的列表项"  >
+<list sub="带图标、说明、跳转的列表项"  bind:onTap="listTapEvent" >
   <listItem icon="{{base64.icon20}}" showExtr="{{true}}" text="标题文本" value="说明文本" ></listItem> 
   <listItem icon="{{base64.icon20}}" showExtr="{{true}}" text="标题文本" value="说明文本" ></listItem> 
 </list>
