--- a/mp_kq/app.wxss
+++ b/mp_kq/app.wxss
@@ -1,11 +1,8 @@
 /**app.wxss**/
 @import 'style/mpkq.wxss';
-/* .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-}  */
+.title{
+  padding: 16rpx 24rpx;
+  font-size: 26rpx;
+  color: #555;
+  line-height: 44rpx;
+}
