--- a/mp_kq/components/list/list_item.wxml
+++ b/mp_kq/components/list/list_item.wxml
@@ -3,11 +3,13 @@
   <view class='mpkq-list_icon' wx:if="{{icon}}">
     <image src="{{icon}}"></image>
   </view>
-  <view class='mpkq-list_text'>
-    {{text}}<slot name="text"></slot>
+  <view class='mpkq-list_title'>
+    <view class='mpkq-list_text'>{{text}}</view>
+    <view class="mpkq-list_des">{{des}}<slot name="des"></slot></view>
   </view>
-  <view class='mpkq-list_value'>
-    {{value}}<slot name="value"></slot>
+  <view class='mpkq-list_value'> 
+    <block wx:if="{{value}}">{{value}}</block>
+    <block wx:else><slot name="value"></slot></block>
   </view>
   <view class='mpkq-list_extr' wx:if="{{showExtr}}">
     <image src="/assets/images/icon_right.png"></image>
