--- a/mp_kq/pages/index/index.wxml
+++ b/mp_kq/pages/index/index.wxml
@@ -1,6 +1,11 @@
 <list sub="布局" datas="{{listDatas}}" bind:onTap="listTapEvent"/>
 <list sub="表单" bind:onTap="FormTapEvent" >
   <listItem text="Start 评分星星" showExtr="true"></listItem> 
+  <listItem text="Input 输入框" showExtr="true"></listItem> 
+  <listItem text="Password 密码输入" showExtr="true"></listItem> 
+  <listItem text="Radio 单选" showExtr="true"></listItem> 
+  <listItem text="Checkbox 复选" showExtr="true"></listItem> 
+  <listItem text="SearchBar 搜索框" showExtr="true"></listItem> 
+  <listItem text="Stepper 步进器" showExtr="true"></listItem> 
 </list>
 
- 
