--- a/mp_kq/pages/list/list.wxml
+++ b/mp_kq/pages/list/list.wxml
@@ -1,6 +1,6 @@
 <!--pages/list/list.wxml-->
 <list sub="带说明的列表项"  >
-  <listItem text="标题文本" value="说明文本" ></listItem> 
+  <listItem text="标题文本" value="说明文本" des="描述文本"></listItem> 
 </list>
 <list sub="带图标、说明的列表项"  >
   <listItem icon="{{base64.icon20}}" text="标题文本" value="说明文本" ></listItem> 
