--- a/mp_kq/style/mpkq.wxss
+++ b/mp_kq/style/mpkq.wxss
@@ -1,6 +1,6 @@
 @import './mpkq_mask.wxss';
 /* @import './mpkq_btn.wxss'; */
 page{
-  background-color: #EDEDED;
+  background-color: #f9f9f9;
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
