--- a/mp_kq/style/mpkq.wxss
+++ b/mp_kq/style/mpkq.wxss
@@ -1,5 +1,5 @@
 @import './mpkq_mask.wxss';
-/* @import './mpkq_btn.wxss'; */
+@import './mpkq_btn.wxss'; 
 page{
   background-color: #f9f9f9;
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
