--- a/mp_kq/pages/index/index.wxml
+++ b/mp_kq/pages/index/index.wxml
@@ -4,11 +4,12 @@
 </view>
 <list sub="布局" datas="{{listDatas}}" bind:onTap="listTapEvent"/>
 <list sub="小组件" bind:onTap="littleTapEvent">
-  <listItem text="Dialog 弹窗" showExtr="true"></listItem> 
+  <listItem text="Modal 拟态弹窗" showExtr="true"></listItem> 
   <listItem text="CountDown 倒计时" showExtr="true"></listItem> 
   <listItem text="Divider 分隔符" showExtr="true"></listItem> 
   <listItem text="Tag 标签" showExtr="true"></listItem> 
   <listItem text="HalfScreen Dialog 半屏弹窗" showExtr="true"></listItem> 
+  <listItem text="Dialog 弹窗" showExtr="true"></listItem>
 </list> 
 <list sub="表单" bind:onTap="FormTapEvent" >
   <listItem text="Start 评分星星" showExtr="true"></listItem> 
