--- a/mp_kq/components/dialog/dialog.wxss
+++ b/mp_kq/components/dialog/dialog.wxss
@@ -1,128 +1,77 @@
 /* components/dialog/dialog.wxss */
-.mpkq-demo-dialog{
-  visibility:hidden;
-  opacity:0;
-  transition:opacity .3s;
+.mpkq-dialog {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .3s;
 }
-.mpkq-demo-dialog_show{
+.mpkq-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.5);
+}
+.show{
   visibility:visible;
   opacity:1;
 }
-.mpkq-dialog__wrp{
-  position:fixed;
-  z-index:5000;
-  top:16px;
-  bottom:16px;
-  left:16px;
-  right:16px;
+.mpkq-dialog_box {
+  position: fixed;
+  bottom: 0;
+  left: 5%;
+  right: 5%;
+  z-index: 11;
+  background: white;
+  transform: translateY(100%);
+  transition: all 0.3s ease;
+  border-radius:15px;
+  padding: 0 48rpx;
+}
+.show .mpkq-dialog_box {
+  transform: translateY(calc( 50% - 50vh ));
+}
+.mpkq-dialog_header{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.mpkq-dialog_header icon,.mpkq-dialog_header .mpkq-icon-btn{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+}
+.mpkq-dialog_header_left{
+  position: relative;
+  left: -8px;
+}
+.mpkq-dialog_header_right{
+  right: -8px;
+  left: auto;
+  position: relative;
+}
+.mpkq-dialog_header_center{
+  padding: 16rpx 30rpx;
+  background:white;
   text-align:center;
-  font-size:0;
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:flex;
-  -webkit-box-align:center;
-  -webkit-align-items:center;
-  align-items:center;
-  -webkit-box-pack:center;
-  -webkit-justify-content:center;
-  justify-content:center;
+  flex: 1;
 }
-.mpkq-dialog__wrp .mpkq-dialog{max-height:100%;}
-.mpkq-dialog{
-  background-color:#fff;
-  text-align:center;
-  border-radius:3px;
-  overflow:hidden;
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:flex;
-  -webkit-flex-direction:column;
-  -webkit-box-orient:vertical;
-  -webkit-box-direction:normal;
-  flex-direction:column;
-  max-height:90%;
+.mpkq-dialog_title{
+  color:#000;
+  font-size:34rpx;
+  line-height:60rpx;
+  font-weight:700
 }
-.mpkq-dialog__hd{padding:32px 24px 16px}
-.mpkq-dialog__title{
-  font-weight:700;
-  font-size:17px;
-  line-height:1.4
+.mpkq-dialog_subtitle{
+  color:#666;
+  font-size:22rpx;
+  line-height:30rpx;
 }
-.mpkq-dialog__bd{
-  -webkit-box-flex:1;
-  -webkit-flex:1;
-  flex:1;
-  overflow-y:auto;
-  -webkit-overflow-scrolling:touch;
-  padding:0 24px;
-  margin-bottom:32px;
-  min-height:40px;
-  font-size:17px;
-  line-height:1.4;
-  overflow-wrap:break-word;
-  -webkit-hyphens:auto;
-  hyphens:auto;
-  color:rgba(0,0,0,.5);
-}
-.mpkq-dialog__bd:first-child{
-  padding:32px 24px 0;
-  font-weight:700;
-  color:rgba(0,0,0,.9);
-  -webkit-flex-direction:column;
-  -webkit-box-orient:vertical;
-  -webkit-box-direction:normal;
-  flex-direction:column;
-  -webkit-box-pack:center;
-  -webkit-justify-content:center;
-  justify-content:center;
-}
-.mpkq-dialog__bd:first-child,.mpkq-dialog__ft{
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:flex;
-}
-.mpkq-dialog__ft{
-  position:relative;
-  line-height:64px;
-  min-height:64px;
-  font-size:17px;
-}
-.mpkq-dialog__ft:after{
-  content:" ";
-  position:absolute;
-  left:0;
-  top:0;
-  right:0;
-  height:1px;
-  border-top:1rpx solid rgba(0,0,0,.1);
-  color:rgba(0,0,0,.1);
-}
-.mpkq-dialog__btn{
-  display:block;
-  -webkit-box-flex:1;
-  -webkit-flex:1;
-  flex:1;
-  color:rgba(0,0,0,.9);
-  font-weight:700;
-  text-decoration:none;
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
-  position:relative;
-}
-.mpkq-dialog__btn:active{background-color:#ececec}
-.mpkq-dialog__btn:after{
-  content:" ";
-  position:absolute;
-  left:0;
-  top:0;
-  width:1px;
-  bottom:0;
-  border-left:1rpx solid rgba(0,0,0,.1);
-  color:rgba(0,0,0,.1);
-}
-.mpkq-dialog__btn:first-child:after{display:none} 
-.mpkq-dialog__btn_primary{
-  color:#06ae56;
-}
-@media screen and (min-width:352px){
-  .mpkq-dialog{width:320px;margin:0 auto}
+.mpkq-dialog_scroll_box{
+  height:720rpx
 }
