--- a/mp_kq/components/dialog/dialog.wxml
+++ b/mp_kq/components/dialog/dialog.wxml
@@ -1,10 +1,10 @@
 <!--components/dialog/dialog.wxml-->
 <view class="mpkq-dialog {{ show ? 'show' : '' }}">
   <view class="mpkq-mask" bindtap="_onClickBg" />
-  <view class="mpkq-dialog_box" style="bottom:{{bottom}}rpx">
+  <view class="mpkq-dialog_box mpkq-class">
     <view class="mpkq-dialog_header">
       <view class="mpkq-dialog_header_left">
-        <view class="mpkq-icon-btn_close mpkq-icon-btn" bindtap="_onClickBg">关闭</view>
+        <view class="{{icon=='back'?'mpkq-icon-btn_back ':'mpkq-icon-btn_close '}}   mpkq-icon-btn" bindtap="_onClickBg">{{icon=='back'?'返回':'关闭'}}</view>
       </view>
       <view class="mpkq-dialog_header_center"> 
         <view class='mpkq-dialog_title'>{{title}}</view>
