--- a/mp_kq/pages/dialog/dialog.wxss
+++ b/mp_kq/pages/dialog/dialog.wxss
@@ -1,5 +1,32 @@
 /* pages/dialog/dialog.wxss */
+.dialog_box{
+  text-align: center;
+  padding: 48rpx;
+}
 .dialog_img{
-  width: 90%;
-  margin: 5%;
+  width: 60%;
+}
+.scrollBg{
+  padding-bottom: 40rpx;
+}
+.base-line{
+  position:relative;
+}
+.base-line::after{
+  content:'';
+  position:absolute;
+  top:0;
+  width:200%;
+  height:200%;
+  transform:scale(.5);
+  transform-origin:0 0;
+  pointer-events:none;
+  box-sizing:border-box;
+  border:0 solid #e9eaec;
+  border-bottom-width:1px;
+  left:0;
+  right:0
+}
+.no-padding{
+  padding: 0 !important
 }
