--- a/mp_kq/components/modal/modal.wxss
+++ b/mp_kq/components/modal/modal.wxss
@@ -1,4 +1,13 @@
 /* components/dialog/dialog.wxss */
+.mpkq-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.5);
+}
 .mpkq-demo-dialog{
   visibility:hidden;
   opacity:0;
