--- a/mp_kq/components/tabs/tab_item.wxml
+++ b/mp_kq/components/tabs/tab_item.wxml
@@ -1,6 +1,8 @@
 <!--components/tabs/tab_item.wxml-->
 <view class="mpkq-tab_item" bindtap="_handleClickItem" 
 style="color:{{checked?color:'#000'}}">
-  <view>{{title}}</view>
+  <badge count="{{count}}" dot="{{dot}}">
+    <view>{{title}}</view>
+  </badge>
   <view class="mpkq-tab_bar" wx:if="{{ checked }}" style="background: {{ color }}"></view>
 </view>
