--- a/mp_kq/pages/tabbar/tabbar.wxml
+++ b/mp_kq/pages/tabbar/tabbar.wxml
@@ -13,7 +13,7 @@
 </TabBar>
 <view class="title">固定底部</view>
 <TabBar fixed current="{{current}}" bind:change="changeCurrent">
-  <BarItem key="homepage" title="首页" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
-  <BarItem key="application" title="应用" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
-  <BarItem key="my" title="我的" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
+  <BarItem key="homepage" title="首页" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}" count="1"/>
+  <BarItem key="application" title="应用" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}" dot/>
+  <BarItem key="my" title="我的" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}" count="100"/>
 </TabBar>
