--- a/mp_kq/components/start/start.wxml
+++ b/mp_kq/components/start/start.wxml
@@ -3,7 +3,8 @@
   <view class="mpkq-start_box">
     <view class="mpkq-start_inner_box">
       <block wx:for="{{count}}" wx:key="{{item}}">
-        <view style='width:{{size}}px;height:{{size}}px;background-size:{{size}}px {{size}}px;' class="mpkq-stars {{value>=index+1? 'on': ''}}" bindtap="changeColor" data-index="{{index}}"></view>
+        <!-- <view style='width:{{size}}px;height:{{size}}px;background-size:{{size}}px {{size}}px;' class="mpkq-stars {{value>=index+1? 'on': ''}}" bindtap="changeColor" data-index="{{index}}"></view> -->
+        <mpkq-icon class="mpkq-stars" type="{{icon}}" data-index="{{index}}" bindtap="changeColor" size="{{size}}" color="{{value>=index+1? color: '#ddd'}}" />
        </block>   
     </view>
   </view>
