--- a/mp_kq/components/tab-bar/bar_item.wxml
+++ b/mp_kq/components/tab-bar/bar_item.wxml
@@ -1,8 +1,12 @@
 <!--components/tab-bar/bar_item.wxml-->
 <view class="mpkq-barItem_Box" bindtap="_tapItemEvent">
-  <view class="mpkq-barItem_icon">
-    <icon wx:if="{{icon}}" type="{{checked?iconChecked:icon}}"/>
-    <image wx:else src="{{checked?imageChecked:image}}"/>
-  </view>
-  <view class="mpkq-barItem_title" style="color:{{checked?checkedColor:'#333'}}">{{title}}</view>
+  <badge count="{{count}}" dot="{{dot}}">
+    <view>
+      <view class="mpkq-barItem_icon">
+        <icon wx:if="{{icon}}" type="{{checked?iconChecked:icon}}"/>
+        <image wx:else src="{{checked?imageChecked:image}}"/>
+      </view>
+      <view class="mpkq-barItem_title" style="color:{{checked?checkedColor:'#333'}}">{{title}}</view>
+    </view>
+  </badge>
 </view>
