--- a/mp_kq/pages/grid/grid.wxml
+++ b/mp_kq/pages/grid/grid.wxml
@@ -1,13 +1,13 @@
 <!--pages/grid/grid.wxml-->
 <grid sub="图文导航" bind:onTap="gridTapEvent" >
-  <gridItem text="导航1" icon="{{base64.icon20}}"/>
-  <gridItem text="导航2" icon="{{base64.icon20}}"/>
-  <gridItem text="导航3" icon="{{base64.icon20}}"/>
-  <gridItem text="导航4" icon="{{base64.icon20}}"/>
-  <gridItem text="导航5" icon="{{base64.icon20}}"/>
-  <gridItem text="导航6" icon="{{base64.icon20}}"/>
-  <gridItem text="导航7" icon="{{base64.icon20}}"/>
-  <gridItem text="导航8" icon="{{base64.icon20}}"/>
+  <gridItem text="导航1" icon="search" count="123"/>
+  <gridItem text="导航2" image="{{base64.icon20}}" dot/>
+  <gridItem text="导航3" image="{{base64.icon20}}"/>
+  <gridItem text="导航4" image="{{base64.icon20}}"/>
+  <gridItem text="导航5" image="{{base64.icon20}}"/>
+  <gridItem text="导航6" image="{{base64.icon20}}"/>
+  <gridItem text="导航7" image="{{base64.icon20}}"/>
+  <gridItem text="导航8" image="{{base64.icon20}}"/>
 </grid>
 <grid sub="文本导航" type="text" bind:onTap="gridTapEvent">
   <gridTextItem text="导航1" />
