--- a/mp_kq/components/tabs/tab_item.wxss
+++ b/mp_kq/components/tabs/tab_item.wxss
@@ -15,6 +15,9 @@
   flex: 1;
   position: relative;
 }
+.mpkq-tab_item_active{
+  font-weight: 600;
+}
 .mpkq-tab_bar{
   display: block;
   width: 50%;
