--- a/mp_kq/pages/tabbar/tabbar.wxml
+++ b/mp_kq/pages/tabbar/tabbar.wxml
@@ -5,7 +5,8 @@
   <BarItem key="application" title="应用" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
   <BarItem key="my" title="我的" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
 </TabBar>
-<view class="title">自定义颜色</view>
+
+<view class="title">自定义样式</view>
 <TabBar color='red' current="{{current}}" bind:change="changeCurrent">
   <BarItem key="homepage" title="首页" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
   <BarItem key="application" title="应用" image="{{base64.icon20}}" imageChecked="{{base64.icon20}}"/>
